@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "44u [Thu  8 Oct 12:41:36 BST 2020]"
-BUILD = "10081241"
+VERSION = "44u [Fri  9 Oct 08:58:45 BST 2020]"
+BUILD = "10090858"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
